Fix scrollToBottom, more readable styles (#3)

--- a/src/client/debugging.css
+++ b/src/client/debugging.css
@@ -5,17 +5,19 @@
     position: absolute;
     left: 0;
     top: 0;
+    bottom: 0;
+    right: 0;
 
-    width: 100%;
-    min-height: 100%;
     margin: 0;
     padding: 10px;
 
-    background-color: #324D5C;
+    overflow: scroll;
+
+    background-color: #000;
     color: #F0CA4D;
     font-family: monospace;
     font-size: 15px;
-    opacity: 0.7;
+    opacity: 0.8;
 
     white-space: pre-line;
 }
